WIP: adjust jar build script to use compile_java.sh